# startedu-ha

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
custom_components/startedu/: __init__.py  binary_sensor.py  button.py  calendar.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  entity_model.py  i18n.py  manifest.json  models.py  sensor.py  services.yaml  strings.json  sync.py
custom_components/startedu/translations/: en.json  pl.json
docs/: home-assistant-entity-model.md  release-checklist.md  release-process.md  startedu-flow-discovery.md  synchronization-strategy.md  user-guide.md
docs/wiki/: Development-Setup.md  Home-Assistant-Entities.md  Home.md  Project-Overview.md  Release-Checklist.md  Release-Notes-Template.md  Release-Process.md  Roadmap.md  Security-and-Credentials.md  StartEdu-Data-Model.md  Synchronization-Strategy.md  User-Guide.md
scripts/: startedu_probe.py
tests/: conftest.py  ha_stubs.py  test_cancel_meal.py  test_client_parser.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_entity_model.py  test_repository_structure.py  test_sanitized_fixtures.py  test_startedu_probe.py  test_sync_strategy.py
tests/fixtures/: startedu_client_dashboard_sanitized.html  startedu_commitments_sanitized.html  startedu_dashboard.html  startedu_invalid_login_sanitized.html  startedu_login_page_sanitized.html  startedu_order_show_sanitized.html  startedu_refunds_sanitized.html
