[project]
name = "startedu-ha"
version = "0.1.0"
description = "Home Assistant HACS integration for StartEdu"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 88

